--- a/buildable/package.json
+++ b/buildable/package.json
@@ -15,7 +15,10 @@
     "esbuild": "^0.14.10"
   },
   "dependencies": {
+    "discord-webhook-node": "^1.1.8",
     "mongodb": "^6.1.0",
-    "mongoose": "^7.6.2"
+    "mongoose": "^7.6.2",
+    "pino": "^8.16.0",
+    "pino-pretty": "^10.2.3"
   }
 }
