--- a/buildable/package.json
+++ b/buildable/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "discord-webhook-node": "^1.1.8",
+    "fivem-js": "^1.5.2",
     "mongodb": "^6.1.0",
     "mongoose": "^7.6.2",
     "pino": "^8.16.0",
