--- a/buildable/package.json
+++ b/buildable/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@citizenfx/client": "latest",
     "@citizenfx/server": "latest",
+    "@faker-js/faker": "^8.2.0",
     "@types/node": "^16.3.1",
     "@types/uuid": "^9.0.5",
     "esbuild": "^0.14.10"
