--- a/buildable/interface/package.json
+++ b/buildable/interface/package.json
@@ -9,7 +9,8 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "watch": "vite build --watch"
   },
   "dependencies": {
     "@qvant/qui-max": "^0.19.0",
@@ -31,10 +32,12 @@
     "@vue/tsconfig": "^0.4.0",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
+    "naive-ui": "^2.35.0",
     "npm-run-all2": "^6.0.6",
     "prettier": "^3.0.3",
     "sass": "^1.69.3",
     "typescript": "~5.2.0",
+    "vfonts": "^0.0.3",
     "vite": "^4.4.9",
     "vue-tsc": "^1.8.11"
   }
