--- a/buildable/interface/package.json
+++ b/buildable/interface/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@qvant/qui-max": "^0.19.0",
+    "@vicons/ionicons5": "^0.12.0",
     "axios": "^1.5.1",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
