--- a/buildable/client/tsconfig.json
+++ b/buildable/client/tsconfig.json
@@ -5,7 +5,7 @@
     "module": "commonjs",
     "target": "es2021",
     "lib": ["es2021"],
-    "types": ["@citizenfx/client", "fivem-js", "@types/node"],
+    "types": ["@citizenfx/client", "@types/node"],
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "esModuleInterop": true,
