feat: Add vehicle autopilot feature
- Added a new command 'shuff' to control vehicle seating.
- Created functions to start and stop the autopilot.
- Implemented autopilot logic to drive the player to a specific location using long range task.
- Added notifications to inform the player about autopilot status.
- Implemented character select screen to spawn the character at a default location.
- Updated the character carousel to display characters vertically.
- Bug fixes and code improvements.

fix: Rename build-lua script to 'lua'

--- a/buildable/package.json
+++ b/buildable/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "build": "node build.js --mode=production",
-    "build-lua": "node build-lua.js",
+    "lua": "node build-lua.js",
     "watch": "node build.js"
   },
   "devDependencies": {
